[package]
name = "portal"
version = "0.1.0"
authors = [""]

[dependencies]
backtrace = {version = "0.3", features = ["libunwind", "libbacktrace", "std"], default-features = false}
clap = { version = ">=2.27.1", default-features = false}

api_server = { path = "api_server" }
portal_util = { path = "portal_util" }
jailer = { path = "jailer" }
logger = { path = "logger" }
mmds = { path = "mmds" }
seccomp = { path = "seccomp" }
sys_util = { path = "sys_util" }
vmm = { path = "vmm" }

[dev-dependencies]
tempfile = ">=3.0.2"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"

[workspace]
